[package]
name = "rpc"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
csrf = { path = "../csrf" }

prost = "0.12.0"
serde = { version = "1.0.152", features = ["derive"] }
num-traits = "0.2.15"
num-derive = "0.4.0"
clap = { version = "4.3.0", features = ["derive"] }
http = "0.2.9"
bson = "2.5.0"
warp = "0.3.3"

[build-dependencies]
prost-build = "0.12.0"
glob = "0.3.1"
