[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
errors = { path = "../errors" }

serde = { version = "1.0.193", features = ["derive", "rc"] }
http = "1.0.0"
warp = "0.3.6"
bson = "2.8.1"
