[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
errors = { path = "../errors" }

serde = { version = "1.0.213", features = ["derive", "rc"] }
http = "1.1.0"
warp = "0.3.7"
bson = "2.13.0"
