[package]
name = "subscribe"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }

async-trait = "0.1.80"
log = { version = "0.4.22", features = ["kv_unstable", "serde"] }
async-nats = "0.35.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["time"] }
bytes = "1.6.0"
futures = "0.3.30"
