[package]
name = "symbols"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
rpc = { path = "../rpc" }
types = { path = "../types" }
subscribe = { path = "../subscribe" }
round_robin_client = { path = "../round_robin_client" }

clients = { path = "../clients" }
writers = { path = "../writers" }

async-trait = "0.1.80"
futures = "0.3.30"
mongodb = { version = "2.8.2", default-features = false, features = [
  "async-std-runtime",
] }
reqwest = { version = "0.12.4", features = ["gzip", "brotli", "json"] }
serde = { version = "1.0.199", features = ["derive"] }
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
serde_json = "1.0.116"
url = "2.5.0"
rmp-serde = "1.2.0"
