[package]
name = "symbols"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
rpc = { path = "../rpc" }
types = { path = "../types" }
subscribe = { path = "../subscribe" }
round_robin_client = { path = "../round_robin_client" }

clients = { path = "../clients" }
writers = { path = "../writers" }

async-trait = "0.1.83"
futures = "0.3.31"
mongodb = "3.1.0"
reqwest = { version = "0.12.8", features = ["gzip", "brotli", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
serde_json = "1.0.128"
url = "2.5.2"
rmp-serde = "1.3.0"
