[package]
name = "tasks"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
tokio = {version = "1.2.0", features=["rt", "rt-multi-thread", "sync"]}
