[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.209"
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = [
  "rt",
  "rt-multi-thread",
  "time",
  "sync",
] }
rand = "0.8.5"
warp = "0.3.7"
futures = "0.3.30"
