[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = [
  "rt",
  "rt-multi-thread",
  "time",
  "sync",
] }
rand = "0.8.5"
warp = "0.3.7"
futures = "0.3.31"
