[package]
name = "tls"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }

hyper = "0.13.8"
hyper-openssl = "0.8.1"
openssl = "0.10.30"
tonic-openssl = "0.1.0"
tower = "0.3.1"
tower-util = "0.3.1"
tonic = "0.3.1"
