[package]
name = "types"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }

url = "2.5.2"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["sync", "net"] }
bson = { version = "2.11.0", features = ["chrono-0_4"] }
mongodb = "3.0.0"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
serde_json = "1.0.118"
rug = { version = "1.24.1", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.4", features = ["force-cross"] }
chrono = "0.4.38"
