[package]
name = "types"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }

url = "2.5.2"
serde = { version = "1.0.206", features = ["derive"] }
tokio = { version = "1.39.2", features = ["sync", "net"] }
bson = { version = "2.11.0", features = ["chrono-0_4"] }
mongodb = "3.0.1"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
serde_json = "1.0.124"
rug = { version = "1.25.0", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.4", features = ["force-cross"] }
chrono = "0.4.38"
