[package]
name = "types"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }

url = "2.5.2"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["sync", "net"] }
bson = { version = "2.13.0", features = ["chrono-0_4"] }
mongodb = "3.1.0"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
serde_json = "1.0.132"
rug = { version = "1.26.1", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.4", features = ["force-cross"] }
chrono = "0.4.38"
