[package]
name = "writers"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
futures = "0.3.21"
mongodb = { version = "2.2.1", default-features = false, features = ["async-std-runtime"] }
