[package]
name = "bot_service"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bot = { path = "../../libs/bot" }
config = { path = "../../libs/config" }
errors = { path = "../../libs/errors" }
csrf = { path = "../../libs/csrf" }
access_logger = { path = "../../libs/access_logger" }
warp_utils = { path = "../../libs/warp_utils" }
rpc = { path = "../../libs/rpc" }

warp = { version = "0.3.7", features = ["tls"] }
mongodb = "3.1.0"
reqwest = { version = "0.12.7", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
  "cookies",
] }
tokio = { version = "1.40.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "signal",
] }
futures = "0.3.30"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
clap = { version = "4.5.18", features = ["derive"] }
libc = "0.2.154"
http = "1.1.0"
